--- a/pom.xml
+++ b/pom.xml
@@ -511,9 +511,10 @@
                 <db.script>mysql</db.script>
                 <jpa.database>MYSQL</jpa.database>
                 <jdbc.driverClassName>com.mysql.cj.jdbc.Driver</jdbc.driverClassName>
-                <jdbc.url>jdbc:mysql://localhost:3306/petclinic?useUnicode=true</jdbc.url>
-                <jdbc.username>petclinic</jdbc.username>
-                <jdbc.password>petclinic</jdbc.password>
+                <jdbc.url>jdbc:mysql://terraform-20210716145312692800000001.cujtzzncevfx.us-east-2.rds.amazonaws.com:3306
+/petclinic_eks?useUnicode=true</jdbc.url>
+                <jdbc.username>petclinic_eks_user</jdbc.username>
+                <jdbc.password>IjRJnKj2hFknimX7vkU0</jdbc.password>
             </properties>
             <dependencies>
                 <dependency>
