--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: 478208517748.dkr.ecr.us-east-2.amazonaws.com/k8s-static:number
+        image: 478208517748.dkr.ecr.us-east-2.amazonaws.com/petclinic-eks:number
         ports:
         - containerPort: 80
